Use non-deprecated on Java 11 newInstance method.
Change-Id: Ie98212d4b702bfce1999101ddf966d19af4dfd4b
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>